--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 title: Home
 ---
-<h2>Conference Outline</h2>
+<h2>Live Stream</h2>
 <div class="flex-video"><iframe width="560" height="340" src="http://cdn.livestream.com/embed/irishplanninginstitute?layout=4&amp;height=340&amp;width=560&amp;autoplay=false" style="border:0;outline:0" frameborder="0" scrolling="no"></iframe><div style="font-size: 11px;padding-top:10px;text-align:center;width:560px">Watch <a href="http://www.livestream.com/?utm_source=lsplayer&amp;utm_medium=embed&amp;utm_campaign=footerlinks" title="live streaming video">live streaming video</a> from <a href="http://www.livestream.com/irishplanninginstitute?utm_source=lsplayer&amp;utm_medium=embed&amp;utm_campaign=footerlinks" title="Watch irishplanninginstitute at livestream.com">irishplanninginstitute</a> at livestream.com</div></div>
 <h2>Conference Outline</h2>	
 <p>
